--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		<div data-state = "close">
 			<div class="heading"><i class="fas fa-snowflake"></i>December</div>
 			<div class="info">
-				<h2>Winter. December</h2>
+				<h2>Winter. December 2018</h2>
 				<img src="images/december.png" alt="">
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eligendi cupiditate consequuntur harum, illo esse doloremque nostrum consequatur iusto ratione dolore asperiores, veniam maxime, vitae eum autem non dolorum cum nemo.</p>
 			</div>
