--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 		<div data-state = "close">
 			<div class="heading"><i class="fas fa-snowflake"></i>January</div>
 			<div class="info">
-				<h2>Winter. January</h2>
+				<h2>Winter. January 2019</h2>
 				<img src="images/january.png" alt="">
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eligendi cupiditate consequuntur harum, illo esse doloremque nostrum consequatur iusto ratione dolore asperiores, veniam maxime, vitae eum autem non dolorum cum nemo.</p>
 			</div>
@@ -28,7 +28,7 @@
 		<div data-state = "close">
 			<div class="heading"><i class="fas fa-snowflake"></i>February</div>
 			<div class="info">
-				<h2>Winter. February</h2>
+				<h2>Winter. February 2019</h2>
 				<img src="images/february.png" alt="">
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eligendi cupiditate consequuntur harum, illo esse doloremque nostrum consequatur iusto ratione dolore asperiores, veniam maxime, vitae eum autem non dolorum cum nemo.</p>
 			</div>
@@ -36,7 +36,7 @@
 		<div data-state = "close">
 			<div class="heading"><i class="fas fa-dove"></i>March</div>
 			<div class="info">
-				<h2>Spring. March</h2>
+				<h2>Spring. March 2019</h2>
 				<img src="images/march.png" alt="">
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eligendi cupiditate consequuntur harum, illo esse doloremque nostrum consequatur iusto ratione dolore asperiores, veniam maxime, vitae eum autem non dolorum cum nemo.</p>
 			</div>
