Adding number for month

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 		<div data-state = "close">
 			<div class="heading"><i class="fas fa-feather"></i>September</div>
 			<div class="info">
-				<h2>Autumn. September</h2>
+				<h2>Autumn. September 09</h2>
 				<img src="images/september.png" alt="">
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eligendi cupiditate consequuntur harum, illo esse doloremque nostrum consequatur iusto ratione dolore asperiores, veniam maxime, vitae eum autem non dolorum cum nemo.</p>
 			</div>
@@ -92,7 +92,7 @@
 		<div data-state = "close">
 			<div class="heading"><i class="fas fa-feather"></i>October</div>
 			<div class="info">
-				<h2>Autumn. October</h2>
+				<h2>Autumn. October 10</h2>
 				<img src="images/october.png" alt="">
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eligendi cupiditate consequuntur harum, illo esse doloremque nostrum consequatur iusto ratione dolore asperiores, veniam maxime, vitae eum autem non dolorum cum nemo.</p>
 			</div>
@@ -100,7 +100,7 @@
 		<div data-state = "close" class="open">
 			<div class="heading"><i class="fas fa-feather"></i>November</div>
 			<div class="info">
-				<h2>Autumn. November</h2>
+				<h2>Autumn. November 11</h2>
 				<img src="images/november.png" alt="">
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eligendi cupiditate consequuntur harum, illo esse doloremque nostrum consequatur iusto ratione dolore asperiores, veniam maxime, vitae eum autem non dolorum cum nemo.</p>
 			</div>
